# SysMonitor

./: .gitignore  CMakeLists.txt  GenAI.py  Projectclient  Projectserver  README.md  Server with diffrent class  Server with security features  Server.cpp  client.cpp  mc  pc  projectClient.cpp  projectServer.cpp  ps
Certificate/: server.crt  server.key
Client/: CMakeLists.txt  SystemInfoClient.cpp  SystemInfoClient.h  client.cpp  m  main.cpp  mc  pc.cpp  projectClient.cpp  server_info.json
GenAI/: GenAI.py  constants.py
Server/: .gitignore  CMakeLists.txt  DatabaseManager.cpp  DatabaseManager.h  Server.cpp  exported_data.csv  main.cpp  projectServer.cpp  ps  server.cpp
Server/Header_files/: DatabaseManager.h  Server.h
Server/buils/: CMakeCache.txt  Makefile  cmake_install.cmake  exported_data.csv  server
SysUI/sysBackend/: C-S-D-Backend.js  Client-Backend.js  Database-Backend.js  Server-Backend.js  backend.js  clientBackend.js  database.js  emailService.js  package-lock.json  package.json  serverBackend.js
SysUI/sysui/: package-lock.json  package.json
SysUI/sysui-app/: package-lock.json  package.json
SysUI/sysui-app/src/: App.js  client.js  graphComponent.js  server.js
SysUI/sysui/public/: index.html
SysUI/sysui/src/: App.css  App.js  client.js  graphComponent.js  index.js  server.js  styles.css  template.js
SysUI/sysui/src/AuthContext/: AuthContext.js
SysUI/web ui/: client.html  index.html  server.html
SysUI/web ui/css/: styles.css
